ehm ... theme development?

--- a/scss/base/index.scss
+++ b/scss/base/index.scss
@@ -3,6 +3,7 @@
 @import 'text-align';
 @import 'helper';
 @import 'text-color';
+@import 'background-color';
 @import 'font/index';
 @import 'spacing';
 @import 'typo';
