--- a/scss/modules/formelements/input.setup.scss
+++ b/scss/modules/formelements/input.setup.scss
@@ -9,7 +9,7 @@ $input-field-height: 100% !default;
 $input-field-border-width: 1px !default;
 $input-field-border-color: $color-palette-gray-02 !default;
 
-$input-label-position-left: 0 !default;
+$input-label-position-left: rem(10px) !default;
 $input-label-position-top: 50% !default;
 $input-label-line-height: 1.5 !default;
 $input-label-opacity: 0 !default;
