--- a/scss/modules/index.scss
+++ b/scss/modules/index.scss
@@ -3,9 +3,12 @@
 @import 'footer/index';
 @import 'signet/index';
 @import 'button/index';
+@import 'breadcrumb/index';
 @import 'formelements/index';
 @import 'navigation/index';
 @import 'overlay/index';
+@import 'author-box/index';
+@import 'sections/index';
 @import 'teaser/index';
 @import 'header/index';
 @import 'link/index';
