--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -389,11 +389,38 @@ a {
 .-text-align-right {
   text-align: right; }
 
-.even {
-  background-color: #595556; }
-
-.odd {
-  background-color: #f3f3f3; }
+.-hide {
+  display: none; }
+  @media (min-width: 0px) and (max-width: calc(480px - 1px)) {
+    .-hide--xxs-xs {
+      display: none; } }
+  @media (min-width: 480px) and (max-width: calc(768px - 1px)) {
+    .-hide--xs-s {
+      display: none; } }
+  @media (min-width: 768px) and (max-width: calc(992px - 1px)) {
+    .-hide--s-m {
+      display: none; } }
+  @media (min-width: 992px) and (max-width: calc(1200px - 1px)) {
+    .-hide--m-l {
+      display: none; } }
+  @media (min-width: 1200px) {
+    .-hide--l-up {
+      display: none; } }
+  @media (min-width: 0px) {
+    .-hide--xxs-up {
+      display: none; } }
+  @media (min-width: 480px) {
+    .-hide--xs-up {
+      display: none; } }
+  @media (min-width: 768px) {
+    .-hide--s-up {
+      display: none; } }
+  @media (min-width: 992px) {
+    .-hide--m-up {
+      display: none; } }
+  @media (min-width: 1200px) {
+    .-hide--l-up {
+      display: none; } }
 
 .-text-color-white {
   color: #fff; }
@@ -421,6 +448,33 @@ a {
 
 .-text-color-red-01 {
   color: #cf4135; }
+
+.-background-color-white {
+  background-color: #fff; }
+
+.-background-color-black {
+  background-color: #000; }
+
+.-background-color-gray-01 {
+  background-color: #595556; }
+
+.-background-color-gray-02 {
+  background-color: #f3f3f3; }
+
+.-background-color-gray-03 {
+  background-color: #e0e0e0; }
+
+.-background-color-blue-01 {
+  background-color: #457b8c; }
+
+.-background-color-blue-02 {
+  background-color: #798796; }
+
+.-background-color-green-01 {
+  background-color: #08b8b8; }
+
+.-background-color-red-01 {
+  background-color: #cf4135; }
 
 @font-face {
   font-family: "OswaldRegular";
@@ -1163,7 +1217,8 @@ a {
 .-typo-headline-01 {
   font-size: 1.5625rem;
   text-transform: uppercase;
-  font-weight: normal; }
+  font-weight: normal;
+  line-height: 1.35; }
   @media (min-width: 992px) {
     .-typo-headline-01 {
       font-size: 2.5rem; } }
@@ -1172,7 +1227,8 @@ a {
   position: relative;
   font-size: 1.875rem;
   text-transform: uppercase;
-  font-weight: normal; }
+  font-weight: normal;
+  line-height: 1.35; }
   .-typo-headline-02::after {
     background-color: #08b8b8;
     position: absolute;
@@ -1211,6 +1267,10 @@ a {
   font-size: 1rem;
   line-height: 1.5rem;
   font-weight: 700; }
+
+.-typo-copy--big {
+  font-size: 1.125rem;
+  line-height: 1.5rem; }
 
 .-flex {
   display: -webkit-box;
@@ -2017,6 +2077,49 @@ a {
     .button-secondary__label--light {
       color: #fff; }
 
+.breadcrumb a {
+  font-family: 'PTSansRegular', Arial, sans-serif;
+  -webkit-font-smoothing: antialiased;
+  font-smoothing: antialiased;
+  font-size: 16px;
+  font-size: 1rem;
+  color: #798796; }
+  .breadcrumb a:hover {
+    color: #08b8b8; }
+
+.breadcrumb__link {
+  font-family: 'PTSansRegular', Arial, sans-serif;
+  -webkit-font-smoothing: antialiased;
+  font-smoothing: antialiased;
+  color: #798796;
+  font-size: 16px;
+  font-size: 1rem;
+  text-decoration: none;
+  -webkit-transition: .2s ease-in-out;
+  transition: .2s ease-in-out; }
+  .breadcrumb__link:hover {
+    color: #08b8b8; }
+
+.breadcrumb__label {
+  font-family: 'PTSansRegular', Arial, sans-serif;
+  -webkit-font-smoothing: antialiased;
+  font-smoothing: antialiased;
+  color: #798796;
+  font-size: 16px;
+  font-size: 1rem; }
+
+.breadcrumb__current {
+  font-family: 'PTSansRegular', Arial, sans-serif;
+  -webkit-font-smoothing: antialiased;
+  font-smoothing: antialiased;
+  color: #798796;
+  font-size: 16px;
+  font-size: 1rem; }
+
+.breadcrumb__icon {
+  color: #e0e0e0;
+  vertical-align: text-top; }
+
 .input {
   display: block;
   position: relative;
@@ -2025,7 +2128,7 @@ a {
   overflow: hidden;
   border: none; }
   .input__field {
-    padding-left: 0rem;
+    padding-left: 0.625rem;
     padding-right: 2.8125rem;
     padding-top: 1.25rem;
     padding-bottom: 1.25rem;
@@ -2053,13 +2156,16 @@ a {
     color: #798796;
     position: absolute;
     top: 50%;
-    left: 0;
+    left: 0.625rem;
     line-height: 1.5;
     -webkit-transform: translateY(-50%);
             transform: translateY(-50%);
     -webkit-transition: all .2s ease-in-out;
     transition: all .2s ease-in-out;
     opacity: 0; }
+    .input__label--small {
+      font-size: 14px;
+      font-size: 0.875rem; }
   .input__icon {
     color: #f3f3f3;
     font-size: 20px;
@@ -2326,6 +2432,13 @@ a {
   height: 100%; }
   .navigation-main__item {
     display: inline-block; }
+    .navigation-main__item--parent {
+      position: relative; }
+    .navigation-main__item--parent:hover .navigation-main__sub-menu {
+      opacity: 1;
+      -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
+      filter: alpha(opacity=100);
+      z-index: 1; }
   .navigation-main__link {
     padding-left: 0.625rem;
     padding-right: 0.625rem;
@@ -2333,13 +2446,65 @@ a {
     font-family: 'PTSansRegular', Arial, sans-serif;
     -webkit-font-smoothing: antialiased;
     font-smoothing: antialiased;
-    font-size: 16px;
-    font-size: 1rem;
+    font-size: 18px;
+    font-size: 1.125rem;
+    text-transform: uppercase;
     -webkit-transition: color .2s ease-in-out;
     transition: color .2s ease-in-out;
-    text-decoration: none; }
+    text-decoration: none;
+    font-weight: 700; }
     .navigation-main__link:hover {
       color: #08b8b8; }
+  .navigation-main__sub-menu {
+    opacity: 0;
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+    filter: alpha(opacity=0);
+    background-color: #fff;
+    padding-top: 1.25rem;
+    padding-bottom: 0.625rem;
+    text-align: left;
+    position: absolute;
+    top: 25px;
+    left: 0;
+    border-radius: 3px;
+    z-index: 1;
+    -webkit-transition: .3s ease-in-out;
+    transition: .3s ease-in-out;
+    -webkit-box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.15);
+            box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.15); }
+    .navigation-main__sub-menu::before {
+      content: '';
+      position: absolute;
+      top: -5px;
+      left: 50%;
+      -webkit-transform: translateX(-50%);
+              transform: translateX(-50%);
+      width: 0;
+      height: 0;
+      border-left: 5px solid transparent;
+      border-right: 5px solid transparent;
+      border-bottom: 5px solid #fff; }
+    .navigation-main__sub-menu__item {
+      display: block; }
+    .navigation-main__sub-menu__link {
+      color: #798796;
+      font-family: 'PTSansRegular', Arial, sans-serif;
+      -webkit-font-smoothing: antialiased;
+      font-smoothing: antialiased;
+      font-size: 16px;
+      font-size: 1rem;
+      display: block;
+      padding-top: 0.9375rem;
+      padding-bottom: 0.9375rem;
+      padding-left: 1.875rem;
+      padding-right: 5rem;
+      -webkit-transition: .2s ease-in-out;
+      transition: .2s ease-in-out;
+      text-decoration: none; }
+      .navigation-main__sub-menu__link:hover {
+        color: #08b8b8;
+        -webkit-transform: translateX(4px);
+                transform: translateX(4px); }
 
 .navigation-footer__item {
   padding-left: 0.25rem;
@@ -2416,6 +2581,72 @@ a {
     .overlay__input .input__border {
       display: none; }
 
+.author-box {
+  padding-top: 1.5625rem;
+  padding-bottom: 1.5625rem;
+  padding-left: 1.5625rem;
+  padding-right: 1.5625rem;
+  border-top: 1px #f3f3f3 double;
+  border-radius: 4px; }
+  .author-box__name {
+    font-family: 'OswaldRegular', Arial, sans-serif;
+    -webkit-font-smoothing: antialiased;
+    font-smoothing: antialiased;
+    font-size: 25px;
+    font-size: 1.5625rem;
+    color: #457b8c;
+    text-transform: uppercase; }
+  .author-box__details {
+    font-family: 'PTSansRegular', Arial, sans-serif;
+    -webkit-font-smoothing: antialiased;
+    font-smoothing: antialiased;
+    font-size: 16px;
+    font-size: 1rem;
+    color: #798796;
+    margin-top: 1.25rem;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    line-height: 1.5; }
+    .author-box__details img {
+      border-radius: 50%;
+      float: left;
+      margin: 0 20px 10px 0; }
+  .author-box__link {
+    font-family: 'PTSansRegular', Arial, sans-serif;
+    -webkit-font-smoothing: antialiased;
+    font-smoothing: antialiased;
+    font-size: 16px;
+    font-size: 1rem;
+    color: #798796;
+    -webkit-transition: .2s ease-in-out;
+    transition: .2s ease-in-out; }
+    .author-box__link:hover {
+      color: #08b8b8; }
+
+.section-fullwidth {
+  padding-top: 1.875rem;
+  padding-bottom: 1.875rem; }
+  @media (min-width: 992px) {
+    .section-fullwidth {
+      padding-top: 3.125rem;
+      padding-bottom: 3.125rem; } }
+  .section-fullwidth--404 {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    position: relative;
+    background-image: url("../img/404.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 70vh; }
+
 .teaser-image-text {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -2461,6 +2692,7 @@ a {
     font-size: 1.875rem;
     text-transform: uppercase;
     font-weight: normal;
+    line-height: 1.35;
     font-family: 'OswaldRegular', Arial, sans-serif;
     -webkit-font-smoothing: antialiased;
     font-smoothing: antialiased; }
@@ -2493,7 +2725,8 @@ a {
   background: transparent;
   width: 100%;
   -webkit-box-sizing: border-box;
-          box-sizing: border-box; }
+          box-sizing: border-box;
+  top: -100%; }
   .header--fixed {
     background-color: #fff;
     position: fixed;
@@ -2501,7 +2734,9 @@ a {
     left: 0;
     -webkit-box-shadow: 0 0 0.3125rem 0 rgba(0, 0, 0, 0.2);
             box-shadow: 0 0 0.3125rem 0 rgba(0, 0, 0, 0.2);
-    z-index: 10; }
+    z-index: 10;
+    -webkit-transition: .6s;
+    transition: .6s; }
   .header__signet {
     max-width: 2.8125rem; }
   .header__input .input__field {
@@ -2644,7 +2879,13 @@ a {
   border-radius: 0.25rem;
   -webkit-box-shadow: 0 0 15px 1px rgba(0, 0, 0, 0.05);
           box-shadow: 0 0 15px 1px rgba(0, 0, 0, 0.05);
-  overflow: hidden; }
+  overflow: hidden;
+  -webkit-transition: .4s ease-in-out;
+  transition: .4s ease-in-out; }
+  @media (min-width: 992px) {
+    .item-news:hover {
+      -webkit-transform: translateY(-10px);
+              transform: translateY(-10px); } }
   .item-news__image-container {
     position: relative; }
     .item-news__image-container:hover .item-news__overlay {
@@ -2716,7 +2957,12 @@ a {
     font-family: 'PTSansRegular', Arial, sans-serif;
     -webkit-font-smoothing: antialiased;
     font-smoothing: antialiased;
-    font-weight: 700; }
+    font-weight: 700;
+    -webkit-transition: .2s ease-in-out;
+    transition: .2s ease-in-out; }
+    .item-news__link:hover {
+      -webkit-transform: translateX(5px);
+              transform: translateX(5px); }
 
 .image-hero {
   position: relative;
@@ -2786,3 +3032,79 @@ a {
   width: 100vw;
   max-width: 100vw;
   margin-left: calc( 50% - 50vw); }
+
+.screen-reader-text {
+  display: none; }
+
+.widget-column ul {
+  margin-top: 0.9375rem;
+  list-style-type: circle;
+  margin-left: 20px; }
+  .widget-column ul li {
+    font-family: 'PTSansRegular', Arial, sans-serif;
+    -webkit-font-smoothing: antialiased;
+    font-smoothing: antialiased;
+    font-size: 16px;
+    font-size: 1rem;
+    color: #798796; }
+    .widget-column ul li a {
+      font-family: 'PTSansRegular', Arial, sans-serif;
+      -webkit-font-smoothing: antialiased;
+      font-smoothing: antialiased;
+      font-size: 16px;
+      font-size: 1rem;
+      color: #798796;
+      padding-top: 0.1875rem;
+      padding-bottom: 0.1875rem;
+      display: inline-block;
+      -webkit-transition: .2s ease-in-out;
+      transition: .2s ease-in-out; }
+      .widget-column ul li a:hover {
+        color: #08b8b8; }
+
+.wp-block-separator {
+  border-bottom: none;
+  border-top: 1px #f3f3f3 solid; }
+
+main ul {
+  margin-top: 0.9375rem;
+  list-style-type: circle;
+  margin-left: 20px; }
+  main ul li {
+    font-size: 1rem;
+    line-height: 1.5rem;
+    font-weight: normal;
+    font-family: 'PTSansRegular', Arial, sans-serif;
+    -webkit-font-smoothing: antialiased;
+    font-smoothing: antialiased;
+    color: #798796; }
+    main ul li ul {
+      margin-top: 0rem;
+      list-style-type: square; }
+
+.ac_results {
+  padding-top: 1.25rem;
+  padding-bottom: 1.25rem;
+  border: none;
+  -webkit-box-shadow: 0 0 5px rgba(0, 0, 0, 0.25);
+          box-shadow: 0 0 5px rgba(0, 0, 0, 0.25); }
+  .ac_results li {
+    font-family: 'PTSansRegular', Arial, sans-serif;
+    -webkit-font-smoothing: antialiased;
+    font-smoothing: antialiased;
+    font-size: 16px;
+    font-size: 1rem;
+    color: #457b8c;
+    padding-top: 0.9375rem;
+    padding-bottom: 0.9375rem;
+    padding-left: 1.25rem;
+    padding-right: 4.375rem;
+    display: block;
+    background: transparent;
+    -webkit-transition: .1s ease-in-out;
+    transition: .1s ease-in-out; }
+    .ac_results li:not(:last-of-type) {
+      border-bottom: 1px #f3f3f3 solid; }
+    .ac_results li:hover {
+      color: #08b8b8;
+      background-color: #f3f3f3; }
