--- a/scss/base/typo.scss
+++ b/scss/base/typo.scss
@@ -15,4 +15,6 @@
   &-copy { @include -typo-copy; }
 
   &-copy--strong { @include -typo-copy-strong; }
+
+  &-copy--big { @include -typo-copy-big; }
 }
