--- a/scss/modules/header/header.scss
+++ b/scss/modules/header/header.scss
@@ -14,6 +14,7 @@
   background: transparent;
   width: $header-width;
   box-sizing: border-box;
+  top: -100%;
   
   &--fixed {
     @include -background-color('white');
@@ -23,6 +24,7 @@
     left: $header-fixed-position-left;
     box-shadow: $header-fixed-box-shadow;
     z-index: $header-fixed-z-index;
+    transition: .6s;
   }
 
   &__signet {
