--- a/scss/modules/navigation/navigation-main.scss
+++ b/scss/modules/navigation/navigation-main.scss
@@ -1,17 +1,30 @@
+@import '../../mixins/background-color.mixin';
 @import '../../mixins/text-color.mixin';
 @import '../../mixins/font-size.mixin';
 @import '../../mixins/text-align.mixin';
 @import '../../mixins/spacing.mixin';
+@import '../../mixins/opacity.mixin';
 @import '../../mixins/display.mixin';
 
 @import 'navigation-main.setup';
 
 .navigation-main {
   @include -text-align(center);
+
+  $bem-block: &;
   height: $navigation-main-height;
 
   &__item {
     @include -display(inline-block);
+
+    &--parent {
+      position: relative;
+    }
+    
+    &--parent:hover #{$bem-block}__sub-menu {
+      @include -opacity(1);
+      z-index: 1;
+    }
   }
 
   &__link {
@@ -19,13 +32,69 @@
     @include -spacing-inner('right', 10px);
     @include -text-color('blue-02');
     @include -font-primary;
-    @include -font-size(16);
+    @include -font-size(18);
 
+    text-transform: uppercase;
     transition: color .2s ease-in-out;
     text-decoration: none;
+    font-weight: 700;
 
     &:hover {
       @include -text-color('green-01');
+    }
+  }
+
+  &__sub-menu {
+    @include -opacity(0);
+    @include -background-color('white');
+    @include -spacing-inner('top', 20);
+    @include -spacing-inner('bottom', 10);
+    @include -text-align(left);
+
+    position: absolute;
+    top: 25px;
+    left: 0;
+    //transform: translateX(-50%);
+    border-radius: 3px;
+    z-index: 1;
+    transition: .3s ease-in-out;
+    box-shadow: 5px 5px 10px rgba(0,0,0, .15);
+
+    &::before {
+      content: '';
+      position: absolute;
+      top: -5px;
+      left: 50%;
+      transform: translateX(-50%);
+      width: 0; 
+      height: 0; 
+      border-left: 5px solid transparent;
+      border-right: 5px solid transparent;
+      
+      border-bottom: 5px solid #fff;
+    }
+
+    &__item {
+      @include -display(block);
+    }
+
+    &__link {
+      @include -text-color('blue-02');
+      @include -font-primary;
+      @include -font-size(16);
+      @include -display(block);
+      @include -spacing-inner('top', 15);
+      @include -spacing-inner('bottom', 15);
+      @include -spacing-inner('left', 30);
+      @include -spacing-inner('right', 80);
+
+      transition: .2s ease-in-out;
+      text-decoration: none;
+
+      &:hover {
+        @include -text-color('green-01');
+        transform: translateX(4px);
+      }
     }
   }
 }
