--- a/scss/modules/image/image-hero.setup.scss
+++ b/scss/modules/image/image-hero.setup.scss
@@ -1,3 +1,4 @@
 $image-hero-width: 100% !default;
 $image-hero-height: 90vh !default;
-$image-hero-half-height: 50vh !default;
+$image-hero-half-height: 30vh !default;
+$image-hero-half-height-m: 50vh !default;
