--- a/scss/modules/item-news/item-news.setup.scss
+++ b/scss/modules/item-news/item-news.setup.scss
@@ -4,6 +4,8 @@
 $item-news-border-radius: rem(4px) !default; 
 $item-news-box-shadow: 0 0 15px 1px rgba($color-palette-black, .05) !default;
 
+
+$item-news-image-container-max-height: rem(326px) !default;
 $item-news-image-width: 100% !default;
 
 $item-news-date-position-right: 0 !default;
