--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -25,7 +25,8 @@ footer, header, hgroup, menu, nav, section {
   display: block; }
 
 body {
-  line-height: 1; }
+  line-height: 1;
+  overflow-x: hidden; }
 
 ol, ul {
   list-style: none; }
@@ -1259,18 +1260,18 @@ a {
   text-transform: uppercase; }
 
 .-typo-copy {
-  font-size: 1rem;
-  line-height: 1.5rem;
+  font-size: 1.125rem;
+  line-height: 1.75rem;
   font-weight: normal; }
 
 .-typo-copy--strong {
-  font-size: 1rem;
-  line-height: 1.5rem;
+  font-size: 1.125rem;
+  line-height: 1.75rem;
   font-weight: 700; }
 
 .-typo-copy--big {
-  font-size: 1.125rem;
-  line-height: 1.5rem; }
+  font-size: 1.25rem;
+  line-height: 1.75rem; }
 
 .-flex {
   display: -webkit-box;
@@ -1914,8 +1915,8 @@ a {
     .footer {
       text-align: right; } }
   .footer__paragraph {
-    font-size: 1rem;
-    line-height: 1.5rem;
+    font-size: 1.125rem;
+    line-height: 1.75rem;
     font-weight: normal;
     font-family: 'PTSansRegular', Arial, sans-serif;
     -webkit-font-smoothing: antialiased;
@@ -1988,8 +1989,8 @@ a {
     font-family: 'PTSansRegular', Arial, sans-serif;
     -webkit-font-smoothing: antialiased;
     font-smoothing: antialiased;
-    font-size: 1rem;
-    line-height: 1.5rem;
+    font-size: 1.125rem;
+    line-height: 1.75rem;
     font-weight: normal;
     font-size: 0.875rem;
     width: 100%;
@@ -2402,8 +2403,8 @@ a {
     font-family: 'PTSansRegular', Arial, sans-serif;
     -webkit-font-smoothing: antialiased;
     font-smoothing: antialiased;
-    font-size: 1rem;
-    line-height: 1.5rem;
+    font-size: 1.125rem;
+    line-height: 1.75rem;
     font-weight: normal;
     width: 100%;
     height: 3.75rem;
@@ -2438,7 +2439,8 @@ a {
       opacity: 1;
       -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
       filter: alpha(opacity=100);
-      z-index: 1; }
+      visibility: visible;
+      z-index: 10; }
   .navigation-main__link {
     padding-left: 0.625rem;
     padding-right: 0.625rem;
@@ -2464,28 +2466,47 @@ a {
     padding-bottom: 0.625rem;
     text-align: left;
     position: absolute;
-    top: 25px;
+    top: 30px;
     left: 0;
     border-radius: 3px;
-    z-index: 1;
+    z-index: -1;
     -webkit-transition: .3s ease-in-out;
     transition: .3s ease-in-out;
-    -webkit-box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.15);
-            box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.15); }
+    -webkit-box-shadow: 0 0 20px rgba(0, 0, 0, 0.25);
+            box-shadow: 0 0 20px rgba(0, 0, 0, 0.25);
+    visibility: collapse; }
     .navigation-main__sub-menu::before {
       content: '';
       position: absolute;
-      top: -5px;
-      left: 50%;
-      -webkit-transform: translateX(-50%);
-              transform: translateX(-50%);
+      top: -15px;
+      left: 20px;
       width: 0;
       height: 0;
-      border-left: 5px solid transparent;
-      border-right: 5px solid transparent;
-      border-bottom: 5px solid #fff; }
+      border-radius: 3px;
+      border-left: 15px solid transparent;
+      border-right: 15px solid transparent;
+      border-bottom: 15px solid #fff; }
+    @media (min-width: 992px) {
+      .navigation-main__sub-menu {
+        min-width: 15.625rem; } }
     .navigation-main__sub-menu__item {
-      display: block; }
+      display: block;
+      position: relative;
+      overflow: hidden; }
+      .navigation-main__sub-menu__item:not(:first-of-type) {
+        border-top: 1px #f3f3f3 solid; }
+      .navigation-main__sub-menu__item::before {
+        background-color: #08b8b8;
+        content: '';
+        width: 0.1875rem;
+        height: 100%;
+        position: absolute;
+        left: -4px;
+        top: 0;
+        -webkit-transition: .3s;
+        transition: .3s; }
+      .navigation-main__sub-menu__item:hover::before {
+        left: 0; }
     .navigation-main__sub-menu__link {
       color: #798796;
       font-family: 'PTSansRegular', Arial, sans-serif;
@@ -2494,8 +2515,8 @@ a {
       font-size: 16px;
       font-size: 1rem;
       display: block;
-      padding-top: 0.9375rem;
-      padding-bottom: 0.9375rem;
+      padding-top: 1.25rem;
+      padding-bottom: 1.25rem;
       padding-left: 1.875rem;
       padding-right: 5rem;
       -webkit-transition: .2s ease-in-out;
@@ -2587,6 +2608,7 @@ a {
   padding-left: 1.5625rem;
   padding-right: 1.5625rem;
   border-top: 1px #f3f3f3 double;
+  border-bottom: 1px #f3f3f3 double;
   border-radius: 4px; }
   .author-box__name {
     font-family: 'OswaldRegular', Arial, sans-serif;
@@ -2614,7 +2636,8 @@ a {
     .author-box__details img {
       border-radius: 50%;
       float: left;
-      margin: 0 20px 10px 0; }
+      margin: 0 20px 10px 0;
+      width: 90px; }
   .author-box__link {
     font-family: 'PTSansRegular', Arial, sans-serif;
     -webkit-font-smoothing: antialiased;
@@ -2713,8 +2736,8 @@ a {
     font-family: 'PTSansRegular', Arial, sans-serif;
     -webkit-font-smoothing: antialiased;
     font-smoothing: antialiased;
-    font-size: 1rem;
-    line-height: 1.5rem;
+    font-size: 1.125rem;
+    line-height: 1.75rem;
     font-weight: normal; }
 
 .header {
@@ -2869,8 +2892,8 @@ a {
     font-family: 'PTSansRegular', Arial, sans-serif;
     -webkit-font-smoothing: antialiased;
     font-smoothing: antialiased;
-    font-size: 1rem;
-    line-height: 1.5rem;
+    font-size: 1.125rem;
+    line-height: 1.75rem;
     font-weight: normal;
     line-height: 1.25rem;
     margin-left: 1.5625rem; }
@@ -2887,7 +2910,9 @@ a {
       -webkit-transform: translateY(-10px);
               transform: translateY(-10px); } }
   .item-news__image-container {
-    position: relative; }
+    position: relative;
+    max-height: 20.375rem;
+    overflow: hidden; }
     .item-news__image-container:hover .item-news__overlay {
       opacity: 1;
       z-index: 1; }
@@ -2943,8 +2968,8 @@ a {
         font-size: 20px;
         font-size: 1.25rem; } }
   .item-news__copy {
-    font-size: 1rem;
-    line-height: 1.5rem;
+    font-size: 1.125rem;
+    line-height: 1.75rem;
     font-weight: normal;
     font-family: 'PTSansRegular', Arial, sans-serif;
     -webkit-font-smoothing: antialiased;
@@ -2972,7 +2997,10 @@ a {
   background-repeat: no-repeat;
   background-position: center center; }
   .image-hero--half {
-    height: 50vh; }
+    height: 30vh; }
+    @media (min-width: 992px) {
+      .image-hero--half {
+        height: 50vh; } }
 
 .list-tags__item {
   display: inline-block;
@@ -2999,11 +3027,22 @@ a {
   .list-tags__link:hover {
     color: #08b8b8; }
 
+strong, b {
+  font-weight: 700; }
+
 .has-medium-font-size {
   font-family: 'PTSansRegular', Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
   font-smoothing: antialiased;
   color: #798796;
+  line-height: 1.35; }
+
+.has-large-font-size {
+  font-family: 'PTSansRegular', Arial, sans-serif;
+  -webkit-font-smoothing: antialiased;
+  font-smoothing: antialiased;
+  color: #798796;
+  font-weight: 700;
   line-height: 1.35; }
 
 .wp-block-image figcaption {
@@ -3019,14 +3058,25 @@ a {
   -webkit-font-smoothing: antialiased;
   font-smoothing: antialiased; }
 
+.wp-block-cover, .wp-block-cover-image {
+  min-height: 13.75rem; }
+  @media (min-width: 992px) {
+    .wp-block-cover, .wp-block-cover-image {
+      min-height: 18.75rem; } }
+
 .wp-block-table {
   font-family: 'PTSansRegular', Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
   font-smoothing: antialiased;
-  color: #798796; }
+  color: #798796;
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+  font-weight: normal; }
   .wp-block-table tr td {
     padding-top: 0.625rem;
-    padding-bottom: 0.625rem; }
+    padding-bottom: 0.625rem;
+    padding-left: 0.625rem;
+    padding-right: 0.625rem; }
 
 .alignfull {
   width: 100vw;
@@ -3044,15 +3094,15 @@ a {
     font-family: 'PTSansRegular', Arial, sans-serif;
     -webkit-font-smoothing: antialiased;
     font-smoothing: antialiased;
-    font-size: 16px;
-    font-size: 1rem;
+    font-size: 18px;
+    font-size: 1.125rem;
     color: #798796; }
     .widget-column ul li a {
       font-family: 'PTSansRegular', Arial, sans-serif;
       -webkit-font-smoothing: antialiased;
       font-smoothing: antialiased;
-      font-size: 16px;
-      font-size: 1rem;
+      font-size: 18px;
+      font-size: 1.125rem;
       color: #798796;
       padding-top: 0.1875rem;
       padding-bottom: 0.1875rem;
@@ -3071,8 +3121,8 @@ main ul {
   list-style-type: circle;
   margin-left: 20px; }
   main ul li {
-    font-size: 1rem;
-    line-height: 1.5rem;
+    font-size: 1.125rem;
+    line-height: 1.75rem;
     font-weight: normal;
     font-family: 'PTSansRegular', Arial, sans-serif;
     -webkit-font-smoothing: antialiased;
@@ -3081,6 +3131,31 @@ main ul {
     main ul li ul {
       margin-top: 0rem;
       list-style-type: square; }
+
+main p a {
+  color: #08b8b8;
+  text-decoration: underline; }
+  main p a:hover {
+    color: #457b8c;
+    text-decoration: none; }
+
+main em {
+  font-style: italic; }
+
+.wp-block-quote {
+  background-color: #f3f3f3;
+  padding-top: 0.9375rem;
+  padding-bottom: 1.875rem;
+  padding-left: 1.875rem;
+  padding-right: 1.875rem; }
+  .wp-block-quote cite {
+    font-family: 'PTSansRegular', Arial, sans-serif;
+    -webkit-font-smoothing: antialiased;
+    font-smoothing: antialiased;
+    margin-top: 0.9375rem;
+    color: #457b8c;
+    display: block;
+    font-style: italic; }
 
 .ac_results {
   padding-top: 1.25rem;
