--- a/scss/modules/image/image-hero.scss
+++ b/scss/modules/image/image-hero.scss
@@ -1,3 +1,5 @@
+@import '../../mixins/breakpoint.mixin';
+
 @import 'image-hero.setup';
 
 .image-hero {
@@ -11,5 +13,9 @@
 
   &--half {
     height: $image-hero-half-height;
+    
+    @include breakpoint('m') {
+      height: $image-hero-half-height-m;
+    }
   }
 }
