--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -480,12 +480,14 @@ a {
 @font-face {
   font-family: "OswaldRegular";
   src: url("../font/oswald-regular/Oswald-regular.eot");
-  src: url("../font/oswald-regular/Oswald-regular.eot?#iefix") format("embedded-opentype"), url("../font/oswald-regular/Oswald-regular.woff") format("woff"), url("../font/oswald-regular/Oswald-regular.ttf") format("truetype"), url("../font/oswald-regular/Oswald-regular.svg#OswaldRegular") format("svg"); }
+  src: url("../font/oswald-regular/Oswald-regular.eot?#iefix") format("embedded-opentype"), url("../font/oswald-regular/Oswald-regular.woff") format("woff"), url("../font/oswald-regular/Oswald-regular.ttf") format("truetype"), url("../font/oswald-regular/Oswald-regular.svg#OswaldRegular") format("svg");
+  font-display: swap; }
 
 @font-face {
   font-family: "PTSansRegular";
   src: url("../font/pt-sans-regular/PT-Sans-regular.eot");
-  src: url("../font/pt-sans-regular/PT-Sans-regular.eot?#iefix") format("embedded-opentype"), url("../font/pt-sans-regular/PT-Sans-regular.woff") format("woff"), url("../font/pt-sans-regular/PT-Sans-regular.ttf") format("truetype"), url("../font/pt-sans-regular/PT-Sans-regular.svg#PTSansRegular") format("svg"); }
+  src: url("../font/pt-sans-regular/PT-Sans-regular.eot?#iefix") format("embedded-opentype"), url("../font/pt-sans-regular/PT-Sans-regular.woff") format("woff"), url("../font/pt-sans-regular/PT-Sans-regular.ttf") format("truetype"), url("../font/pt-sans-regular/PT-Sans-regular.svg#PTSansRegular") format("svg");
+  font-display: swap; }
 
 .-font-primary {
   font-family: 'PTSansRegular', Arial, sans-serif;
@@ -1338,7 +1340,8 @@ a {
   src: url("../font/bfde-iconfont/bfde-iconfont.eot?iaj4st");
   src: url("../font/bfde-iconfont/bfde-iconfont.eot?iaj4st#iefix") format("embedded-opentype"), url("../font/bfde-iconfont/bfde-iconfont.ttf?iaj4st") format("truetype"), url("../font/bfde-iconfont/bfde-iconfont.woff?iaj4st") format("woff"), url("../font/bfde-iconfont/bfde-iconfont.svg?iaj4st#bfde-iconfont") format("svg");
   font-weight: normal;
-  font-style: normal; }
+  font-style: normal;
+  font-display: swap; }
 
 .icon {
   /* use !important to prevent issues with browser extensions that change fonts */
